27.7.7
------
(RB=1843206)
Update GenerateRestModelTask to have an ordered set for setWatchedInputDirs input property.

27.7.6
------
(RB=1836131)
Move NO_RESPONSE to RestResponseFactory.

27.7.5
------
(RB=1837489)
Fixing JSON deserialization bug  while setting partition weight via JMX using JSON format

27.7.4
------
(RB=1813571)
Add varargs constructor to primitive arrays.

27.7.3
------
(RB=1834552)
Fixing possible IC corruption issue in dealing with cached CompletionStage.

27.7.2
------
(RB=1831592)
Small improvement in test performance for the ClockExecutor

27.7.1
------
(RB=1818010)
Adding cache to store 'serviceName' in Request and 'protocolVersion' in RestClient.

(RB=1817516)
Do not allow to set weight through ZooKeeperAnnouncerJmx when D2 Server is announced to multiple partitions and Fix the bug of resetting the D2 Partition to Default Partition in Zookeeper

27.7.0
------
(RB=1809448)
Make ApplicationProtocolConfig constructor backward compatible to previous versions of netty by using the deprecated versions present in the previous versions.

27.6.8
------
(RB=1822085)
Update call tracking filter to handle batch finder

(RB=1809448)
LastSeenLoadBalancer: adding back again support for custom d2ServicePath on ZK. Add support for BackupStoreFilePath to LastSeen

27.6.7
------
(RB=1816822)
Rephrase PDL parser error messages to make them more clear

(RB=1809448)
Revert "LastSeenLoadBalancer: adding support for custom d2ServicePath on ZK. Add support for BackupStoreFilePath to LastSeen"

27.6.6
------
(RB=1809448)
LastSeenLoadBalancer: adding support for custom d2ServicePath on ZK. Add support for BackupStoreFilePath to LastSeen

27.6.5
------
(RB=1803600)
Add an configurable option to exclude some typeRef properties from translating into avro schema

27.6.4
------
(RB=1803237)
Fix bug when convert .pdsc to .avsc with override namespace prefix in DENORMALIZE model

27.6.3
------
(RB=1771744)