@@ -17,6 +17,7 @@
 package com.linkedin.r2.disruptor;
 
 import com.linkedin.r2.message.RequestContext;
+import java.util.function.Supplier;
 
 
 /**
@@ -28,14 +29,20 @@ import com.linkedin.r2.message.RequestContext;
 public abstract class DisruptContext
 {
   /**
-   * Key used to access the R2 disrupt source field in {@link RequestContext}. The
-   * disrupt source described if the {@link DisruptMode} of a request has already
-   * been evaluated by some source.
+   * Key used to access the R2 disrupt source field in {@link RequestContext}. The value for this key is the canonical
+   * class name of the disruptor controller that was invoked.
+   *
+   * Presence of this key in a {@link RequestContext} means that no other disrupt controllers should be invoked. It
+   * does <b>not</b> imply presence of {@link #DISRUPT_CONTEXT_KEY}, which may be unset if the controller determines
+   * that no disruption is to take place.
    */
   public static final String DISRUPT_SOURCE_KEY = "R2_DISRUPT_SOURCE";
 
   /**
-   * Key used to access the R2 disrupt context field in {@link RequestContext}
+   * Key used to access the R2 disrupt context field in {@link RequestContext}. The value for this key is the
+   * {@link DisruptContext} instance that should be used to disrupt a request, if any.
+   *
+   * When this key is set in a {@link RequestContext}, the {@link #DISRUPT_SOURCE_KEY} must be set as well.
    */
   public static final String DISRUPT_CONTEXT_KEY = "R2_DISRUPT_CONTEXT";
 
@@ -49,5 +56,28 @@ public abstract class DisruptContext
   public DisruptMode mode()
   {
     return _mode;
+  }
+
+  /**
+   * If there was no previous disruptor called, adds the DisruptContext given by disruptContextSupplier to the
+   * requestContext.
+   * @param context The request context to which the disrupt context should be added.
+   * @param controllerClass The class which is controlling the disruption. Used as the identifier in the request context
+   *                        so that later disruptor calls will be skipped.
+   * @param disruptContextSupplier Called to provide the DisruptContext. If it returns null, the disruptor is still
+   *                               considered to be set, preventing other DisruptContexts from being added later.
+   */
+  public static void addDisruptContextIfNotPresent(RequestContext context, Class<?> controllerClass,
+      Supplier<DisruptContext> disruptContextSupplier) {
+    if (context.getLocalAttr(DISRUPT_SOURCE_KEY) != null)
+    {
+      return;
+    }
+    context.putLocalAttr(DISRUPT_SOURCE_KEY, controllerClass.getCanonicalName());
+    DisruptContext disruptContext = disruptContextSupplier.get();
+    if (disruptContext == null) {
+      return;
+    }
+    context.putLocalAttr(DISRUPT_CONTEXT_KEY, disruptContext);
   }
 }
